[package]
name = "ruknet"
version = "0.1.2"
authors = ["Mirucow"]
description = "Highly accurate reimplementation of the RakNet protocol in Rust"
homepage = "https://github.com/StudioGrails/ruknet"
repository = "https://github.com/StudioGrails/ruknet"
documentation = "https://docs.rs/ruknet"
license = "MIT"
edition = "2021"

[features]
default = []
debug = []
udt = []

[dependencies]
bytes = "1.10.0"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
